syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

import "general.proto";

message CreateProductRequest {
    string store_id = 1;
    string category_id = 2;
    string size_id = 3;
    string color_id = 4;
    string name = 5;
    string description = 6;
    float price = 7;
    bool is_featured = 8;
    bool is_archived = 9;
    repeated Item images = 10;
}

message CreateProductResponse {
    Product product = 1;
}

message GetProductsRequest {
    string store_id = 1;
}

message GetProductsResponse {
   repeated ProductResponse productRes = 1;
}

message GetProductRequest {
    string product_id = 1;
}

message GetProductResponse {
    ProductResponse productRes = 1;
}

message UpdateProductRequest {
    string product_id = 1;
    optional string category_id = 2;
    optional string size_id = 3;
    optional string color_id = 4;
    optional string name = 5;
    optional string description = 6;
    optional float price = 7;
    optional bool is_featured = 8;
    optional bool is_archived = 9;
    repeated Item images = 10;
}

message UpdateProductResponse {
    string message = 1;
}

message DeleteProductRequest {
    string product_id = 1;
}

message DeleteProductResponse {
    string message = 1;
}